feature(EIDOMNI-1075): update readme (remove unnecessary variables), remove incorrect base auth and update application.yaml